# backend/app/Http/Controllers/Api/ApiController.php
@@ -3,9 +3,20 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
-use Illuminate\Auth\AuthenticationException;
 use Illuminate\Http\JsonResponse;
 
+/**
+ * @OA\SecurityScheme (
+ *   securityScheme="bearerAuth",
+ *   type="http",
+ *   scheme="bearer"
+ * )
+ *
+ * @OA\Info(
+ *    title="Tasks application",
+ *    version="777",
+ * )
+ */
 class ApiController extends Controller
 {
     protected function jsonResponse(bool $success, $data = null, int $statusCode = 200): JsonResponse
