# backend/app/Http/Controllers/Api/AuthController.php
@@ -10,6 +10,90 @@ use Illuminate\Support\Facades\Auth;
 
 class AuthController extends ApiController
 {
+    /**
+     * Login action
+     *
+     * @OA\Post (
+     *      path="/api/login",
+     *      summary="Login",
+     *      tags={"User"},
+     *      description="Login",
+     *      @OA\RequestBody(
+     *          request="Login request",
+     *          required=true,
+     *          @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(ref="#/components/schemas/LoginRequest")
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Login result",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="status",
+     *                  type="string",
+     *                  example="success"
+     *              ),
+     *              @OA\Property (
+     *                  property="data",
+     *                  type="object",
+     *                  @OA\Property (
+     *                      property="token",
+     *                      type="string",
+     *                      example="<access token>"
+     *                  )
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation error",
+     *          @OA\JsonContent (
+     *              @OA\Property (
+     *                  property="status",
+     *                  type="string",
+     *                  example="error"
+     *              ),
+     *              @OA\Property (
+     *                  property="data",
+     *                  type="object",
+     *                  @OA\Property (
+     *                      property="errors",
+     *                      type="object",
+     *                      @OA\Property (
+     *                          property="email",
+     *                          type="array",
+     *                          @OA\Items (
+     *                              type="string",
+     *                              example="Email is invalid"
+     *                          )
+     *                      )
+     *                  )
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=400,
+     *          description="Fail login",
+     *          @OA\JsonContent (
+     *              @OA\Property (
+     *                  property="status",
+     *                  type="string",
+     *                  example="error"
+     *              ),
+     *              @OA\Property (
+     *                  property="data",
+     *                  type="string",
+     *                  example="Incorrect email or password"
+     *              )
+     *          )
+     *      )
+     * )
+     *
+     * @param LoginRequest $request
+     * @return JsonResponse
+     */
     public function login(LoginRequest $request): JsonResponse
     {
         $input = $request->validated();
@@ -28,7 +112,74 @@ class AuthController extends ApiController
         ]);
     }
 
-
+    /**
+     * Login action
+     *
+     * @OA\Post (
+     *      path="/api/register",
+     *      summary="Register",
+     *      tags={"User"},
+     *      description="Register user",
+     *      @OA\RequestBody(
+     *          request="Register request",
+     *          required=true,
+     *          @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(ref="#/components/schemas/RegisterRequest")
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Login result",
+     *          @OA\JsonContent(
+     *              @OA\Property(
+     *                  property="status",
+     *                  type="string",
+     *                  example="success"
+     *              ),
+     *              @OA\Property (
+     *                  property="data",
+     *                  type="object",
+     *                  @OA\Property (
+     *                      property="token",
+     *                      type="string",
+     *                      example="<access token>"
+     *                  )
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=422,
+     *          description="Validation error",
+     *          @OA\JsonContent (
+     *              @OA\Property (
+     *                  property="status",
+     *                  type="string",
+     *                  example="error"
+     *              ),
+     *              @OA\Property (
+     *                  property="data",
+     *                  type="object",
+     *                  @OA\Property (
+     *                      property="errors",
+     *                      type="object",
+     *                      @OA\Property (
+     *                          property="email",
+     *                          type="array",
+     *                          @OA\Items (
+     *                              type="string",
+     *                              example="Email is invalid"
+     *                          )
+     *                      )
+     *                  )
+     *              )
+     *          )
+     *      )
+     * )
+     *
+     * @param RegisterRequest $request
+     * @return JsonResponse
+     */
     public function register(RegisterRequest $request): JsonResponse
     {
         $input = $request->validated();
